overflow fix

--- a/src/app/languages/language.css
+++ b/src/app/languages/language.css
@@ -3,6 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   color: rgb(255, 255, 255);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
   /* background-color: #d7d9db; */
   /* background-color: #0b0c10; */
 
